syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package notifications;

service NotificationsService {
    rpc FindUserNotifications (FindUserNotificationsDto) returns (FindNotificationsResponse) {}

    rpc FindUserNotificationsCount (FindUserNotificationsCountDto) returns (google.protobuf.UInt32Value) {}

    rpc ActivateNotification (ActivateNotificationDto) returns (google.protobuf.Empty) {}

    rpc ProcessNotification (ProcessNotificationDto) returns (google.protobuf.Empty) {}
}

message Notification {
    string id = 1;

    string receiverId = 2;

    string type = 3;

    string topic = 4;

    string message = 5;

    string status = 6;

    google.protobuf.Timestamp createdAt = 7;

    google.protobuf.Timestamp processedAt = 9;
}

message FindNotificationsResponse {
    repeated Notification notifications = 1;
}

message FindUserNotificationsDto {
    string userId = 1;
}

message FindUserNotificationsCountDto {
    string userId = 1;
}

message ActivateNotificationDto {
    string notificationId = 1;
}

message ProcessNotificationDto {
    string notificationId = 1;
}